Updated all references to circuit in documentation

--- a/docs/source/examples/3_qubit_GHZ_generation.ipynb
+++ b/docs/source/examples/3_qubit_GHZ_generation.ipynb
@@ -143,7 +143,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1f27fdcd990>"
+       "<drawsvg.drawing.Drawing at 0x11b9caecf90>"
       ]
      },
      "metadata": {},
@@ -156,7 +156,7 @@
     "h_circuit = lw.qubit.H()\n",
     "\n",
     "# We will then define the larger overall circuit - 3 qubits so 6 modes\n",
-    "circuit = lw.Circuit(6)\n",
+    "circuit = lw.PhotonicCircuit(6)\n",
     "\n",
     "# First add the initial Hadamard (H) gate which acts on qubit 1.\n",
     "circuit.add(h_circuit)\n",
