--- a/docs/source/examples/bell_state_generator.ipynb
+++ b/docs/source/examples/bell_state_generator.ipynb
@@ -360,7 +360,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x27b5cfde810>"
+       "<drawsvg.drawing.Drawing at 0x1b9363d0450>"
       ]
      },
      "metadata": {},
@@ -368,7 +368,7 @@
     }
    ],
    "source": [
-    "circ = lw.Circuit(8)\n",
+    "circ = lw.PhotonicCircuit(8)\n",
     "\n",
     "# Assigned per-element loss to 0.05\n",
     "loss = lw.Parameter(0.05, label=\"loss\")\n",
