--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -38,7 +38,7 @@
     "n1 = 2 * np.arccos(1 / (4 - 2 * 2**0.5) ** 0.5)\n",
     "n2 = 2 * np.arccos(2**0.5 - 1)\n",
     "\n",
-    "cnot_circuit = lw.Circuit(8)\n",
+    "cnot_circuit = lw.PhotonicCircuit(8)\n",
     "\n",
     "# Loop over required elements, the format here is:\n",
     "# (mode, [bs reflectivity, phase 1, phase 2])\n",
@@ -287,7 +287,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x160b4978110>"
+       "<drawsvg.drawing.Drawing at 0x2725f4740d0>"
       ]
      },
      "metadata": {},
