--- a/docs/source/interferometers/tutorial.ipynb
+++ b/docs/source/interferometers/tutorial.ipynb
@@ -96,7 +96,7 @@
     }
    ],
    "source": [
-    "bell_circuit = lw.Circuit(4)\n",
+    "bell_circuit = lw.PhotonicCircuit(4)\n",
     "bell_circuit.add(qubit.H())\n",
     "bell_circuit.add(qubit.CNOT())\n",
     "bell_circuit.display()"
