--- a/docs/source/tomography/gate_fidelity.ipynb
+++ b/docs/source/tomography/gate_fidelity.ipynb
@@ -42,7 +42,7 @@
    "outputs": [],
    "source": [
     "def experiment(\n",
-    "    circuits: list[lw.Circuit],\n",
+    "    circuits: list[lw.PhotonicCircuit],\n",
     "    inputs: list[lw.State],\n",
     "    source_indistinguishability: float = 1.0,\n",
     ") -> list:\n",
@@ -154,7 +154,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x28d1b07ed50>"
+       "<drawsvg.drawing.Drawing at 0x161594e8990>"
       ]
      },
      "metadata": {},
@@ -197,7 +197,7 @@
     "\n",
     "which is encoded within the array below.\n",
     "\n",
-    "As expected, the calculated fidelity with an ideal system is 100%."
+    "As expected, the calculated fidelity with an ideal system is nearly 100%."
    ]
   },
   {
