--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -88,7 +88,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def experiment(circuits: list[lw.Circuit], inputs: list[lw.State]) -> list:\n",
+    "def experiment(\n",
+    "    circuits: list[lw.PhotonicCircuit], inputs: list[lw.State]\n",
+    ") -> list:\n",
     "    \"\"\"\n",
     "    Experiment function which is required for performing state tomography on a\n",
     "    system. It takes a list of circuits and generates a corresponding list of\n",
@@ -170,7 +172,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1bbf7976a50>"
+       "<drawsvg.drawing.Drawing at 0x2bab9271350>"
       ]
      },
      "metadata": {},
@@ -357,7 +359,7 @@
     "        self.backend = emulator.Backend(\"slos\")\n",
     "\n",
     "    def experiment(\n",
-    "        self, circuits: list[lw.Circuit], inputs: list[lw.State]\n",
+    "        self, circuits: list[lw.PhotonicCircuit], inputs: list[lw.State]\n",
     "    ) -> list:\n",
     "        \"\"\"\n",
     "        Generalised version of experiment function above, designed for any\n",
