--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -107,7 +107,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x16620ec86d0>"
+       "<drawsvg.drawing.Drawing at 0x199d6bc4cd0>"
       ]
      },
      "metadata": {},
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def experiment_1q(circuits: list[lw.Circuit]) -> list:\n",
+    "def experiment_1q(circuits: list[lw.PhotonicCircuit]) -> list:\n",
     "    \"\"\"\n",
     "    Experiment function which is required for performing state tomography on a\n",
     "    system. It takes a list of circuits and generates a corresponding list of\n",
@@ -248,7 +248,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x16678e69290>"
+       "<drawsvg.drawing.Drawing at 0x199d8d72ed0>"
       ]
      },
      "metadata": {},
@@ -376,7 +376,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x16623298250>"
+       "<drawsvg.drawing.Drawing at 0x199dae68190>"
       ]
      },
      "metadata": {},
@@ -386,7 +386,7 @@
    "source": [
     "n_qubits = 2\n",
     "\n",
-    "bell_circuit = lw.Circuit(2 * n_qubits)\n",
+    "bell_circuit = lw.PhotonicCircuit(2 * n_qubits)\n",
     "bell_circuit.add(qubit.H())\n",
     "bell_circuit.add(qubit.CNOT())\n",
     "\n",
@@ -421,7 +421,7 @@
     "        self.random_seed = 22\n",
     "        self.backend = emulator.Backend(\"slos\")\n",
     "\n",
-    "    def experiment(self, circuits: list[lw.Circuit]) -> list:\n",
+    "    def experiment(self, circuits: list[lw.PhotonicCircuit]) -> list:\n",
     "        \"\"\"\n",
     "        Generalised version of experiment function above, designed for any\n",
     "        number of qubits. It is assumes the provided circuits contain dual-rail\n",
