--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Circuit Building\n",
     "\n",
-    "This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks. It aims to act as a basic reference, with a much more detailed description of each component and functionality included in the SDK Circuit section. "
+    "This tutorial demonstrates how circuits can be built up from the set of fundamental components included within Lightworks. It aims to act as a basic reference, with a much more detailed description of each component and functionality included in the SDK PhotonicCircuit section. "
    ]
   },
   {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7c6610>"
+       "<drawsvg.drawing.Drawing at 0x24e2a62e450>"
       ]
      },
      "metadata": {},
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "circuit = lw.Circuit(4)\n",
+    "circuit = lw.PhotonicCircuit(4)\n",
     "\n",
     "# Beam splitters\n",
     "circuit.bs(0)\n",
@@ -176,7 +176,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511d43c050>"
+       "<drawsvg.drawing.Drawing at 0x24e02582ed0>"
       ]
      },
      "metadata": {},
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7c7a10>"
+       "<drawsvg.drawing.Drawing at 0x24e2a62fb90>"
       ]
      },
      "metadata": {},
@@ -415,7 +415,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x251775a5250>"
+       "<drawsvg.drawing.Drawing at 0x24e2a63f310>"
       ]
      },
      "metadata": {},
@@ -525,7 +525,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7d30d0>"
+       "<drawsvg.drawing.Drawing at 0x24e2a635350>"
       ]
      },
      "metadata": {},
@@ -695,7 +695,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x25177616590>"
+       "<drawsvg.drawing.Drawing at 0x24e02581e50>"
       ]
      },
      "metadata": {},
@@ -770,7 +770,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511e4b12d0>"
+       "<drawsvg.drawing.Drawing at 0x24e2a62e750>"
       ]
      },
      "metadata": {},
@@ -896,7 +896,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7da810>"
+       "<drawsvg.drawing.Drawing at 0x24e2a634550>"
       ]
      },
      "metadata": {},
@@ -906,7 +906,7 @@
    "source": [
     "# Define a smaller circuit and add to mode 1 of the original circuit\n",
     "\n",
-    "circuit2 = lw.Circuit(3)\n",
+    "circuit2 = lw.PhotonicCircuit(3)\n",
     "circuit2.bs(1)\n",
     "circuit2.ps(1, 0.6)\n",
     "circuit2.bs(1)\n",
@@ -1058,7 +1058,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7d13d0>"
+       "<drawsvg.drawing.Drawing at 0x24e2a642290>"
       ]
      },
      "metadata": {},
@@ -1223,7 +1223,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7dbb50>"
+       "<drawsvg.drawing.Drawing at 0x24e2a27a290>"
       ]
      },
      "metadata": {},
@@ -1399,7 +1399,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x2511f7c7110>"
+       "<drawsvg.drawing.Drawing at 0x24e2a63d510>"
       ]
      },
      "metadata": {},
