--- a/docs/source/tutorials/error_simulation.ipynb
+++ b/docs/source/tutorials/error_simulation.ipynb
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "lossy_circuit = lw.Circuit(2)\n",
+    "lossy_circuit = lw.PhotonicCircuit(2)\n",
     "\n",
     "lossy_circuit.bs(0, reflectivity=0.5)\n",
     "lossy_circuit.loss(0, 0.5)\n",
@@ -524,7 +524,7 @@
    "source": [
     "n_modes = 6\n",
     "\n",
-    "interferometer = lw.Circuit(n_modes)\n",
+    "interferometer = lw.PhotonicCircuit(n_modes)\n",
     "\n",
     "# Define parameter to set loss\n",
     "loss = lw.Parameter(0, bounds=[0, 1], label=\"loss\")\n",
@@ -635,7 +635,7 @@
     }
    ],
    "source": [
-    "hom = lw.Circuit(2)\n",
+    "hom = lw.PhotonicCircuit(2)\n",
     "\n",
     "hom.bs(0, reflectivity=0.5)\n",
     "\n",
@@ -851,7 +851,7 @@
     "detector = emulator.Detector(p_dark=1e-3)\n",
     "\n",
     "sampler = lw.Sampler(\n",
-    "    lw.Circuit(6),\n",
+    "    lw.PhotonicCircuit(6),\n",
     "    lw.State([0] * 6),\n",
     "    10000,\n",
     "    detector=detector,\n",
@@ -942,7 +942,7 @@
     "r = 1 / 3\n",
     "theta = np.arccos(r)\n",
     "\n",
-    "bell_circuit = lw.Circuit(6)\n",
+    "bell_circuit = lw.PhotonicCircuit(6)\n",
     "to_add = [\n",
     "    (1, np.pi / 2, 0),\n",
     "    (3, np.pi / 2, 0),\n",
