--- a/docs/source/tutorials/using_parameters.ipynb
+++ b/docs/source/tutorials/using_parameters.ipynb
@@ -327,7 +327,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26cb1b3f110>"
+       "<drawsvg.drawing.Drawing at 0x2ee435f7d90>"
       ]
      },
      "metadata": {},
@@ -337,7 +337,7 @@
    "source": [
     "# Create new circuit\n",
     "n_modes = 5\n",
-    "reck = lw.Circuit(n_modes)\n",
+    "reck = lw.PhotonicCircuit(n_modes)\n",
     "\n",
     "# For storing parameters\n",
     "pdict = lw.ParameterDict()\n",
@@ -776,7 +776,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x26cb1b56a90>"
+       "<drawsvg.drawing.Drawing at 0x2ee43698650>"
       ]
      },
      "metadata": {},
