Updated documentation with changes

--- a/docs/source/examples/3_qubit_GHZ_generation.ipynb
+++ b/docs/source/examples/3_qubit_GHZ_generation.ipynb
@@ -141,7 +141,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x1e6311a0950>"
+       "<drawsvg.drawing.Drawing at 0x1f314101ed0>"
       ]
      },
      "metadata": {},
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
     "results = backend.run(sampler)\n",
     "\n",
     "# Process with function\n",
-    "converted_results = results.map(lw.dual_rail_to_qubit)"
+    "converted_results = results.map(lw.convert.dual_rail_to_qubit)"
    ]
   },
   {
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
     "results = backend.run(sampler)\n",
     "\n",
     "# Process with function\n",
-    "converted_results = results.map(lw.dual_rail_to_qubit)\n",
+    "converted_results = results.map(lw.convert.dual_rail_to_qubit)\n",
     "\n",
     "converted_results.plot()"
    ]
