ruff and mypy fixes

--- a/docs/source/examples/heralded_cnot.ipynb
+++ b/docs/source/examples/heralded_cnot.ipynb
@@ -17,7 +17,7 @@
     "import numpy as np\n",
     "\n",
     "import lightworks as lw\n",
-    "from lightworks import State, emulator"
+    "from lightworks import emulator"
    ]
   },
   {
