--- a/docs/source/tutorials/qubit.ipynb
+++ b/docs/source/tutorials/qubit.ipynb
@@ -582,7 +582,7 @@
     "    circ,\n",
     "    lw.convert.qubit_to_dual_rail(\"000\"),\n",
     "    10000,\n",
-    "    post_selection=post_select\n",
+    "    post_selection=post_select,\n",
     ")"
    ]
   },
