Updated all herald calls in docs

--- a/docs/source/examples/ralph_cnot.ipynb
+++ b/docs/source/examples/ralph_cnot.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,8 @@
     "        cnot_circuit.barrier()\n",
     "\n",
     "# Then add required heralds\n",
-    "cnot_circuit.herald(0, 0, 0)\n",
-    "cnot_circuit.herald(0, 5, 5)"
+    "cnot_circuit.herald(0, 0)\n",
+    "cnot_circuit.herald(5, 0)"
    ]
   },
   {
