--- a/docs/source/tutorials/circuit_building.ipynb
+++ b/docs/source/tutorials/circuit_building.ipynb
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1066,7 +1066,7 @@
     }
    ],
    "source": [
-    "circuit.herald(0, 2, 0)\n",
+    "circuit.herald((2, 0), 0)\n",
     "\n",
     "circuit.display()"
    ]
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
     }
    ],
    "source": [
-    "circuit2.herald(0, 1, 1)\n",
+    "circuit2.herald(1, 0)\n",
     "\n",
     "circuit.add(circuit2, 2)\n",
     "circuit.display()"
