--- a/docs/source/tutorials/error_simulation.ipynb
+++ b/docs/source/tutorials/error_simulation.ipynb
@@ -922,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -959,8 +959,8 @@
     "    bell_circuit.ps(m + 1, p)\n",
     "\n",
     "# Then add required heralds\n",
-    "bell_circuit.herald(0, 0, 0)\n",
-    "bell_circuit.herald(0, 5, 5)\n",
+    "bell_circuit.herald(0, 0)\n",
+    "bell_circuit.herald(5, 0)\n",
     "\n",
     "# Define required post-selection\n",
     "post_select = lambda s: sum(s[0:2]) == 1 and sum(s[2:]) == 1\n",
