Corrected some typos in the updated tomography example notebooks

--- a/docs/source/tomography/gate_fidelity.ipynb
+++ b/docs/source/tomography/gate_fidelity.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "source": [
     "## Ideal System\n",
-    "To measure the average gate fidelity, a new GateFidelity object is created with the required configuration and the experiments generated."
+    "To measure the average gate fidelity, a new GateFidelity object is created with the required configuration and the experiments are then generated."
    ]
   },
   {
