--- a/docs/source/tomography/process_tomography.ipynb
+++ b/docs/source/tomography/process_tomography.ipynb
@@ -155,7 +155,7 @@
    "metadata": {},
    "source": [
     "There is then a choice of algorithms that can be used for the calculation of the choi matrix for the process:\n",
-    "1) Linear inversion - this is a simpler algorithm, but can produce non-physical process matrices (particularily in noisy scenarios).\n",
+    "1) Linear inversion - this is a simpler algorithm with less measurements, but can produce non-physical process matrices (particularily in noisy scenarios).\n",
     "2) Maximum likelihood estimation - this uses a gradient-descent based optimisation, along with a set of projections to enforce conditions for a physical process matrix."
    ]
   },
@@ -164,7 +164,7 @@
    "metadata": {},
    "source": [
     "## Linear Inversion\n",
-    "This method is achieved with the LIProcessTomography object. To initialise this, the number of qubits, circuit are provided. The required experiments are then generated with ``get_experiments``, which is provided as a list of python ProcessTomographyExperiment objects."
+    "This method is achieved with the LIProcessTomography object. To initialise this, the number of qubits & the circuit is provided. The required experiments are then generated with ``get_experiments``, which is provided as a list of python ProcessTomographyExperiment objects."
    ]
   },
   {
@@ -181,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The experiments are then run on the target backend. For process tomography, each experiments specifies a circuit and input state to use, these can both be provided to the Sampler."
+    "The experiments are then run on the target backend. For process tomography, each experiments specifies a circuit and input state to use, these should both be provided to the Sampler (or whichever task you choose)."
    ]
   },
   {
@@ -253,7 +253,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The choi_from_untiary function can then be used to find the expected unitary for a CNOT gate and the fidelity calculate with the relevant fidelity method. As expected this is near to 100%."
+    "The choi_from_untiary function can then be used to find the expected unitary for a CNOT gate and the fidelity calculated with the relevant fidelity method. As expected this is near to 100%."
    ]
   },
   {
@@ -352,7 +352,7 @@
    "metadata": {},
    "source": [
     "### Imperfect Experiment\n",
-    "As with state tomography, it is also possible to introduce imperfections into the experimental simlation, for a better understanding of how these errors affect fidelity.\n",
+    "As with state tomography, it is also possible to introduce imperfections into the experimental simulation, for a better understanding of how these errors affect fidelity.\n",
     "\n",
     "For this, we'll use a class to create a parametrised experiment with optional single photon source noise and then use this for running the experiments."
    ]
