--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -288,7 +288,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And the results generated from these. In this case, we choose to store the data as a dictionary instead of a list, with the measurement basis as keys. This is useful in cases where for some reason the order of results may not be well preserved."
+    "The results are then created for these experiments. In this case, we choose to store the data as a dictionary instead of a list, with the measurement basis as keys. This is useful in cases where for some reason the order of results may not be well preserved."
    ]
   },
   {
@@ -552,7 +552,7 @@
    "source": [
     "After calculation, it is also possible to calculate the fidelity with respect to the expected matrix using the fidelity method. The tomography module contains a density_from_state function which enables the density matrix to be calculated from the expected state.\n",
     "\n",
-    "No imperfections were included within the system, so as expected the fidelity is 1."
+    "No imperfections were included within the system, so as expected the fidelity is 100%."
    ]
   },
   {
