Clarified where qubit_to_dual_rail method can be found.

--- a/docs/source/tutorials/qubit.ipynb
+++ b/docs/source/tutorials/qubit.ipynb
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the system has been configured, it can be simulated through creation of a new Sampler object. The qubit_to_dual_rail method is used to automatically calculate the required dual-rail state."
+    "Once the system has been configured, it can be simulated through creation of a new Sampler object. The ``qubit_to_dual_rail`` method from the ``convert`` module is used to automatically calculate the required dual-rail state."
    ]
   },
   {
