Fixed doc errors + added projection reference

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -688,7 +688,7 @@
     "To correct this, the `project_to_physical` option is added when calculating the density matrix, which will add an additional post-processing step to ensure the matrix is physical.\n",
     "\n",
     ".. note::\n",
-    "    There are many different options to project a density matrix to be physical and Lightworks implements just one of these. For certain applications you may find more success with other alternatives."
+    "    There are many different options to project a density matrix to be physical and Lightworks implements just one of these, in particular <cite data-cite=\"smolin2012\">(smolin2012)</cite> is chosen. For certain applications you may find more success with other alternatives."
    ]
   },
   {
