--- a/docs/source/refs.bib
+++ b/docs/source/refs.bib
@@ -68,3 +68,18 @@
     primaryClass={quant-ph},
     url={https://arxiv.org/abs/2106.13825}, 
 }
+
+@article{smolin2012,
+  title = {Efficient Method for Computing the Maximum-Likelihood Quantum State from Measurements with Additive Gaussian Noise},
+  author = {Smolin, John A. and Gambetta, Jay M. and Smith, Graeme},
+  journal = {Phys. Rev. Lett.},
+  volume = {108},
+  issue = {7},
+  pages = {070502},
+  numpages = {4},
+  year = {2012},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.108.070502},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.108.070502}
+}
