Better tomography tutorials

--- a/docs/source/tomography/state_tomography.ipynb
+++ b/docs/source/tomography/state_tomography.ipynb
@@ -109,7 +109,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x18bf006dcd0>"
+       "<drawsvg.drawing.Drawing at 0x1ac96fc5c10>"
       ]
      },
      "metadata": {},
@@ -256,7 +256,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x18bf2343c90>"
+       "<drawsvg.drawing.Drawing at 0x1acadf86450>"
       ]
      },
      "metadata": {},
@@ -427,7 +427,7 @@
        "</svg>"
       ],
       "text/plain": [
-       "<drawsvg.drawing.Drawing at 0x18bf37e86d0>"
+       "<drawsvg.drawing.Drawing at 0x1acadf62050>"
       ]
      },
      "metadata": {},
