Ruff formatting pass

--- a/docs/source/tomography/gate_fidelity.ipynb
+++ b/docs/source/tomography/gate_fidelity.ipynb
@@ -431,7 +431,8 @@
     "results = [\n",
     "    emulator.Backend(\"slos\").run(\n",
     "        lw.Sampler(exp.circuit, exp.input_state, n_samples, random_seed=seed)\n",
-    "    ) for exp in experiments\n",
+    "    )\n",
+    "    for exp in experiments\n",
     "]\n",
     "\n",
     "f = gate_f.process(results, u_t)\n",
